Add utility functions and components for improved UI and configuration

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "antd": "^5.22.3",
     "axios": "^1.7.8",
     "chart.js": "^4.4.7",
-    "antd": "^5.22.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.465.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -26,7 +32,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
