--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.465.0",
     "prop-types": "^15.8.1",
