feat: implement product selection plans and update routing; enhance dashboard navigation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["logservice"]
+  "cSpell.words": ["logservice"],
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/*.code-search": true,
+    "**/dist": true,
+    "Backend": true
+  }
 }
