--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,1 +1,18 @@
-{ "rewrites": [ { "source": "/(.*)", "destination": "/" } ] }
+{
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build", 
+      "config": {
+        "buildCommand": "npm run optimize-images && npm run build",
+        "outputDirectory": "dist"
+      }
+    }
+  ]
+}
