--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,9 @@
     "@intercom/messenger-js-sdk": "^0.0.14",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
@@ -27,6 +29,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "form-data": "^4.0.1",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
