--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,22 @@
     "**/*.code-search": true,
     "**/dist": true,
     "Backend": true
-  }
+  },
+  "sqltools.connections": [
+    {
+      "pgOptions": {
+        "ssl": {
+          "rejectUnauthorized": true
+        }
+      },
+      "previewLimit": 50,
+      "server": "dpg-cuj887rv2p9s73ftlj8g-a.ohio-postgres.render.com",
+      "port": 5432,
+      "askForPassword": true,
+      "driver": "PostgreSQL",
+      "database": "store_52y1",
+      "username": "obycodez55",
+      "name": "dpg-cuj887rv2p9s73ftlj8g-a.ohio-postgres.render.com"
+    }
+  ]
 }
