--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,6 +36,7 @@
     "form-data": "^4.0.1",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.465.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
