--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@types/canvas-confetti": "^1.9.0",
     "antd": "^5.22.3",
     "axios": "^1.7.9",
@@ -35,6 +36,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "form-data": "^4.0.1",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
