--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-floating-whatsapp": "^5.0.8",
     "react-hook-form": "^7.54.2",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
